--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "intervention/image": "^3.11",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "livewire/livewire": "^3.7",
+        "spatie/laravel-backup": "^9.3",
         "stripe/stripe-php": "^19.1"
     },
     "require-dev": {
