--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "league/flysystem-aws-s3-v3": "^3.0",
         "livewire/livewire": "^3.7",
         "spatie/laravel-backup": "^9.3",
+        "spatie/laravel-flare": "^2.2",
         "stripe/stripe-php": "^19.1"
     },
     "require-dev": {
