--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "livewire/livewire": "^3.7",
         "spatie/laravel-backup": "^9.3",
         "spatie/laravel-flare": "^2.2",
-        "stripe/stripe-php": "^19.1"
+        "stripe/stripe-php": "^19.1",
+        "symfony/http-client": "^8.0",
+        "symfony/mailgun-mailer": "^8.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
